<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My ToDo List (Free Version)</string>
    <string name="sort_prompt">Select Sort Order</string>
    <string name="category_filter">Select Categories to Display</string>
    <string name="category_all">All Categories</string>
    <string name="cat_personal">Personal</string>
    <string name="cat_business">Business</string>
    <string name="cat_travel">Travel</string>
    <string name="cat_house">House</string>
    <string name="save">Save</string>
    <string name="receivedsave">Received note</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="deleted">Deleted</string>
    <string name="blanktitle">Title cannot be blank</string>
    <string name="saved">Saved</string>
    <string name="discarded">Changes discarded</string>
    <string name="categoryeditortitle">Category Editor</string>
    <string name="category">Enter Category</string>
    <string name="category_prompt">Category :</string>
    <string name="tasktitle">Title :</string>
    <string name="entertitle">Enter task title</string>
    <string name="taskdetails">Details :</string>
    <string name="enterdetails">Enter task details</string>
    <string name="markcomplete">Completed</string>
    <string name="search_hint">Search My Todo List</string>
    <string name="searchresults">Search results for:</string>
    <string name="sendemail">Send E-Mail using...</string>
    <string name="taskstartdate">Start date :</string>
    <string name="taskenddate">Due date :</string>
    <string name="priority">Priority :</string>
    <string name="selectstartdate">Select start date</string>
    <string name="selectduedate">Select due date</string>
    <string name="selectstarttime">Select start time</string>
    <string name="selectduetime">Select due time</string>
    <string name="selectdate">Select date</string>
    <string name="selecttime">Select time</string>
    <string name="selectcategory">Select Category</string>
    <string name="selectpriority">Select Priority</string>
    <string name="menu_select_action">Select Action</string>
    <string name="menu_add">Add</string>
    <string name="menu_add_button">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_help">Help</string>
    <string name="menu_search">Search</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_return">Return</string>
    <string name="menu_category">Categories</string>
    <string name="menu_personalization">Personalization</string>
    <string name="menu_get_task_list">Get My ToDo List</string>
    <string name="messagecategoryinuse">Not deleted: Selected category is used by a task</string>
    <string name="messagenotasksfound">No tasks found</string>
    <string name="messagenotimplemented">Feature not implemented</string>
    <string name="messageunknownuri">Unknown uri :</string>
    <string name="messagetaskdeleted">The task has been deleted</string>
    <string name="titlevoiceprompt">Waiting for the note title</string>
    <string name="detailvoiceprompt">Waiting for the note details</string>
    <string name="datetimepref">Date and Time preferences</string>
    <string name="dateformat">Date Format :</string>
    <string name="dateformatsummary">Select the format in which dates are displayed</string>
    <string name="dateseparator">Date Separator :</string>
    <string name="dateseparatorsummary">Select the date separator</string>
    <string name="timeformat">Time Format :</string>
    <string name="timeformatsummary">Select a 12 or 24 hour time format to display time</string>
    <string name="displayoptions">Display preferences</string>
    <string name="displaycompletedtasks">Display Completed Tasks :</string>
    <string name="displaycompletedtaskssummary">Check this option to display completed tasks</string>
    <string name="reminders">Reminder preferences</string>
    <string name="enablereminder">Enable Reminder :</string>
    <string name="enableremindersummary">Check this option to enable task reminders</string>
    <string name="reminderalarm">Reminder Alarm :</string>
    <string name="reminderalarmsummary">Select the alarm to be used for reminders</string>
    <string name="hide">Hide</string>
    <string name="unhide">UnHide</string>
    <string name="helptitle">Help</string>
    <string name="one">1.</string>
    <string name="two">2.</string>
    <string name="three">3.</string>
    <string name="four">4.</string>
    <string name="features">Features</string>
    <string name="help_add">To add a new item, click the add button in the top left hand corner.</string>
    <string name="help_edit">To modify an existing item, touch the item and you will be taken to the edit page.</string>
    <string name="help_delete">To delete an item, select (long touch) the item and when the context menu pops up, select the delete action.</string>
    <string name="help_sort">Touching the Sort By text at the top allows you to change the sequence of your list.</string>
    <string name="help_filter">Touching the All Categories text at the top, allows you to display items only for a selected category.</string>
    <string name="help_checkbox">To mark an item completed, touch the checkbox in the margin.</string>
    <string name="help_presonilization">To personalize your list, press the menu button and select the Personalization option. Some of the options that can be changed are date, time format,.. etc.</string>
    <string name="help_voice_title">To record the title, click on the mike icon (displayed if the google voice recognition app is installed) side of the title. The recording replaces the existing title.</string>
    <string name="help_voice_detail">To record details, click on the mike icon (displayed if the google voice recognition app is installed) by the Details text. The recording gets added to the existing details.</string>
    <string name="help_search">To Return to the main page, click the back button or return from the menu.</string>
    <string name="help_search_1">To search again, press the search button on your device.</string>
    <string translatable="false" name="blankTag">Are you sure you dont want to add Tag</string>
    <string name="tasktagheading">Task Tag :</string>
</resources>
