<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@id/TaskEditHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Black"
        android:text="@string/app_name"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@id/evvelope"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:orientation="vertical">

        <TextView
            android:id="@id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helptitle" />

        <TableLayout
            android:id="@id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one" />

                <TextView
                    android:id="@id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="2.0"
                    android:text="@string/help_add" />
            </TableRow>

            <TableRow
                android:id="@id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two" />

                <TextView
                    android:id="@id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="2.0"
                    android:text="@string/help_edit" />
            </TableRow>

            <TableRow
                android:id="@id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three" />

                <TextView
                    android:id="@id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="2.0"
                    android:text="@string/help_delete" />
            </TableRow>

            <TableRow
                android:id="@id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </TableLayout>

        <TextView
            android:id="@id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="3dp"
            android:text="@string/features" />

        <TableLayout
            android:id="@id/tableLayout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableRow
                android:id="@id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/one" />

                <TextView
                    android:id="@id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="2.0"
                    android:text="@string/help_sort" />
            </TableRow>

            <TableRow
                android:id="@id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/two" />

                <TextView
                    android:id="@id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="2.0"
                    android:text="@string/help_filter" />
            </TableRow>

            <TableRow
                android:id="@id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/three" />

                <TextView
                    android:id="@id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="2.0"
                    android:text="@string/help_checkbox" />
            </TableRow>

            <TableRow
                android:id="@id/tableRow8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/four" />

                <TextView
                    android:id="@id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="2.0"
                    android:text="@string/help_presonilization" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>
