<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/taskeditmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppBackground"
    android:orientation="vertical">

    <TextView
        android:id="@id/TaskEditHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Black"
        android:text="@string/app_name"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@id/taskeditlevel1_v"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@id/TaskEditTitle_h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@id/tasktitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/tasktitle"
                android:textColor="@color/Black" />

            <EditText
                android:id="@id/tasktitle_e"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="2.0"
                android:background="@drawable/edittext"
                android:hint="@string/entertitle"
                android:paddingRight="2dp"
                android:singleLine="true">

                <requestFocus />
            </EditText>

            <Button
                android:id="@id/titlevoicebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:background="@drawable/voice32" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/DetailLevel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3.0"
            android:orientation="vertical">

            <LinearLayout
                android:id="@id/TaskDetailLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@id/DetailLevel3_voice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@id/TaskDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taskdetails"
                        android:textColor="@color/Black" />

                    <Button
                        android:id="@id/detailvoicebutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:background="@drawable/voice32" />
                </LinearLayout>

                <EditText
                    android:id="@id/TaskDetail_e"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edittext"
                    android:cursorVisible="true"
                    android:hint="@string/enterdetails"
                    android:isScrollContainer="true"
                    android:scrollbars="horizontal" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/DateandTimeSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@id/TextPrompts"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@id/TaskStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="@string/taskstartdate"
                        android:textColor="@color/Black" />

                    <TextView
                        android:id="@id/EndStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="@string/taskenddate"
                        android:textColor="@color/Black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@id/DateArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:orientation="vertical">

                    <Button
                        android:id="@id/TaskStartDate_e"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoText="false"
                        android:background="@drawable/edittext"
                        android:clickable="true"
                        android:hint="@string/selectdate"
                        android:text="@string/selectdate" />

                    <Button
                        android:id="@id/TaskDueDate_e"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:background="@drawable/edittext"
                        android:hint="@string/selectdate"
                        android:text="@string/selectdate" />
                </LinearLayout>

                <LinearLayout
                    android:id="@id/TimeArea"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1.0"
                    android:orientation="vertical">

                    <Button
                        android:id="@id/TaskStartTime_e"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext"
                        android:hint="@string/selecttime"
                        android:text="@string/selecttime" />

                    <Button
                        android:id="@id/TaskDueTime_e"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:background="@drawable/edittext"
                        android:hint="@string/selecttime"
                        android:text="@string/selecttime" />
                </LinearLayout>

                <LinearLayout
                    android:id="@id/cleararea"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@id/clear_startdttm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="50.0"
                        android:background="@drawable/ic_clear" />

                    <Button
                        android:id="@id/clear_duedttm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_weight="50.0"
                        android:background="@drawable/ic_clear" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@id/PrioritySection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@id/priority_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority"
                    android:textColor="@color/Black" />

                <Spinner
                    android:id="@id/priority_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="23dp"
                    android:background="@drawable/edittext" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/CategorySection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@id/category_prompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_prompt"
                        android:textColor="@color/Black" />

                    <Spinner
                        android:id="@id/category_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9dp"
                        android:background="@drawable/edittext" />
                </LinearLayout>

                <MultiAutoCompleteTextView
                    android:id="@+id/tag_auto_complete"
                    android:layout_width="match_parent"
                    android:background="@drawable/edittext"
                    android:hint="Get your tag here"
                    android:padding="2dp"
                    android:layout_height="40dp" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@id/SaveArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@id/status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="false"
                android:textColor="@color/Black" />

            <Button
                android:id="@id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/save" />

            <Button
                android:id="@id/email_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/email48" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
