<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/AppBackground"
    android:orientation="vertical">

    <TextView
        android:id="@id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Black"
        android:text="@string/app_name"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@id/add_category"
            android:layout_width="39dp"
            android:layout_height="match_parent"
            android:background="@drawable/custombutton"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="1dp"
            android:text="@string/menu_add_button" />

        <View
            android:id="@id/view1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:background="@color/Black" />

        <View
            android:id="@id/view1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/AppBackground" />

        <View
            android:id="@id/view1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/Black" />

        <TextView
            android:id="@id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoryeditortitle"
            android:textColor="@color/Black" />
    </LinearLayout>

    <View
        android:id="@id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Black" />

    <View
        android:id="@id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/AppBackground" />

    <View
        android:id="@id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Black" />

    <ListView
        android:id="@+id/datalist_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000" />

    <View
        android:id="@id/c_row_h_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Black" />
</LinearLayout>
